# gym-sailing

./: LICENSE  README.md  pyproject.toml
gym_sailing/: __init__.py
gym_sailing/envs/: __init__.py  boat_env.py  motorboat_env.py  sailboat_env.py
gym_sailing/physics/: boat.py  motorboat.py  sailboat.py
gym_sailing/utils/: renderer.py  utils.py
